syntax = "proto3";
option go_package = "./pb";

package pb;
import "model_server.proto";

service ServerService {
	// 创建服务
	rpc createServer (CreateServerRequest) returns (CreateServerResponse);

	// 修改服务
	rpc updateServer (UpdateServerRequest) returns (UpdateServerResponse);

	// 计算服务数量
	rpc countAllEnabledServers (CountAllEnabledServersRequest) returns (CountAllEnabledServersResponse);

	// 列出单页服务
	rpc listEnabledServers (ListEnabledServersRequest) returns (ListEnabledServersResponse);

	// 禁用某服务
	rpc disableServer (DisableServerRequest) returns (DisableServerResponse);

	// 查找单个服务
	rpc findEnabledServer (FindEnabledServerRequest) returns (FindEnabledServerResponse);
}

// 创建服务
message CreateServerRequest {
	int64 userId = 1;
	int64 adminId = 2;
	int64 clusterId = 6;
	bytes config = 3;
	bytes includeNodesJSON = 4;
	bytes excludeNodesJSON = 5;
}

message CreateServerResponse {
	int64 serverId = 1;
}

// 修改服务
message UpdateServerRequest {
	int64 serverId = 1;
	int64 userId = 2;
	int64 adminId = 3;
	int64 clusterId = 4;
	bytes config = 5;
	bytes includeNodesJSON = 6;
	bytes excludeNodesJSON = 7;
}

message UpdateServerResponse {

}

// 计算服务数量
message CountAllEnabledServersRequest {

}

message CountAllEnabledServersResponse {
	int64 count = 1;
}

// 列出单页服务
message ListEnabledServersRequest {
	int64 offset = 1;
	int64 size = 2;
}

message ListEnabledServersResponse {
	repeated Server servers = 1;
}

// 禁用服务
message DisableServerRequest {
	int64 serverId = 1;
}

message DisableServerResponse {

}

// 查找单个服务
message FindEnabledServerRequest {
	int64 serverId = 1;
}

message FindEnabledServerResponse {
	Server server = 1;
}